--- a/Restaurant.html
+++ b/Restaurant.html
@@ -3,6 +3,9 @@
     <head>
         <title>Jummy's Jollof</title>
         <link rel="stylesheet" href="Restaurant.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" 
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
         <div id="hero-section"> 
@@ -36,10 +39,10 @@
 
         <div id="footer-section">
             <img src="image"> <!-- TODO: add a image of the logo & center image  -->
-            <div class="socials">
-                <div class="insta">Instagram</div>
-                <div class="tik">TikTok</div>
-                <div class="face">Facebook</div>
+            <div class="socials"> <!-- TODO: link the icons with the things needed -->
+                <i class="fa-brands fa-square-instagram"></i>
+                <i class="fa-brands fa-tiktok"></i>
+                <i class="fa-brands fa-square-whatsapp"></i>
             </div>
             <div>
                 <h4>Opening Times</h4>
