--- a/Restaurant.html
+++ b/Restaurant.html
@@ -9,10 +9,10 @@
     </head>
     <body>
         <div id="hero-section"> 
-            <div class="menu">Menus</div>
-            <div class="gallary">Gallary</div>
+            <div class="menu"><a href="">Menu</a></div>
             <div class="logo">Logo</div>
-            <div class="contacts">Contacts</div>
+            <div class="gallary"><a href="">Gallary</a></div>
+            <!-- <div class="contacts"><a href="">Contacts</a></div> --> 
         </div>
 
         <div id="second-section">
@@ -40,11 +40,11 @@
         <div id="footer-section">
             <img src="image"> <!-- TODO: add a image of the logo & center image  -->
             <div class="socials"> <!-- TODO: link the icons with the things needed -->
-                <i class="fa-brands fa-square-instagram"></i>
-                <i class="fa-brands fa-tiktok"></i>
-                <i class="fa-brands fa-square-whatsapp"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <!-- <i class="fa-brands fa-tiktok"></i> --> 
+                <i class="fa-brands fa-whatsapp"></i>
             </div>
-            <div>
+            <div class="footer-text">
                 <h4>Opening Times</h4>
                 <p>Monday - Saturday 09:00 - 20:00</p>
                 <h4>Location</h4>
