--- a/Restaurant.html
+++ b/Restaurant.html
@@ -9,9 +9,9 @@
     </head>
     <body>
         <div id="hero-section"> 
-            <div class="menu"><a href="">Menu</a></div>
+            <div class="menu"><a href="menu.html">Menu</a></div>
             <div class="logo">Logo</div>
-            <div class="gallary"><a href="">Gallary</a></div>
+            <div class="gallary"><a href="gallary.html">Gallary</a></div>
             <!-- <div class="contacts"><a href="">Contacts</a></div> --> 
         </div>
 
@@ -38,7 +38,7 @@
         </div> 
 
         <div id="footer-section">
-            <img src="image"> <!-- TODO: add a image of the logo & center image  -->
+           <!-- <img src="image"> --> <!-- TODO: add a image of the logo & center image  -->
             <div class="socials"> <!-- TODO: link the icons with the things needed -->
                 <i class="fa-brands fa-instagram"></i>
                 <!-- <i class="fa-brands fa-tiktok"></i> --> 
