--- a/Restaurant.html
+++ b/Restaurant.html
@@ -7,7 +7,7 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
-    <body>
+    <body> <!-- TODO: change the font of the website -->
         <div id="hero-section"> 
             <div class="menu"><a href="menu.html">Menu</a></div>
             <div class="logo">Logo</div>
