--- a/menu.html
+++ b/menu.html
@@ -2,10 +2,12 @@
 <html>
     <head>
         <title>Jummy's Jollof Menu</title>
-
+        <link rel="stylesheet" href="Restaurant.html">
+        <link rel="stylesheet" href="Restaurant.css">
+        <link rel="stylesheet" href="menu.css">
     </head>
     <body>
-        Hello Menu 
-        
+        <div id="background">
+        </div>
     </body>
 </html>
