before major changes

--- a/Restaurant.html
+++ b/Restaurant.html
@@ -1,57 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
     <head>
         <title>Jummy's Jollof</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="Restaurant.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" 
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
+
     <body> <!-- TODO: change the font of the website -->
-        <div id="hero-section"> 
-            <div class="menu"><a href="menu.html">Menu</a></div>
-            <div class="logo">Logo</div>
-            <div class="gallary"><a href="gallary.html">Gallary</a></div>
-            <!-- <div class="contacts"><a href="">Contacts</a></div> --> 
-        </div>
-
-        <div id="second-section">
-            <img src="jummys jollof front (placeholder).webp" class="front">
-        </div>
-
-        <div id="third-section">
-            <div>
-                <p>Jummy's Jollof serves the best Nigerian food ! We're ready to serve you delicous,
-                    authentic dishes that will make your taste buds dance. 
-                    Come and experience the true taste of Nigeria with us ! <!--TODO: enter text about the restaurant --> </p>
+        <div id="main-section"> 
+            <div id="hero-section"> 
+                <div class="menu"><a href="menu.html">Menu</a></div>
+                <div class="logo">Logo</div>
+                <div class="gallary"><a href="gallary.html">Gallary</a></div>
+                <!-- <div class="contacts"><a href="">Contacts</a></div> --> 
             </div>
-        </div>
 
-        <div id="forth-section"> <!-- this section is for the pictures of the restaurant -->
-            <div>
-                <div id="tryout">
-                    <div><img src="art work 1 (placeholder).jpg" class="one"></div>
-                    <div><img src="art work 2 (placeholder).jpg" class="two"></div>
-                    <div><img src="art work 3 (placeholder).jpg" class="three"></div>
+            <div id="second-section">
+                <img src="jummys jollof front (placeholder).webp" class="front">
+            </div>
+
+            <div id="third-section">
+                <div>
+                    <p>Jummy's Jollof serves the best Nigerian food ! We're ready to serve you delicous,
+                        authentic dishes that will make your taste buds dance. 
+                        Come and experience the true taste of Nigeria with us ! <!--TODO: enter text about the restaurant --> </p>
                 </div>
             </div>
-        </div> 
 
-        <div id="footer-section">
-           <!-- <img src="image"> --> <!-- TODO: add a image of the logo & center image  -->
-            <div class="socials"> <!-- TODO: link the icons with the things needed -->
-                <i class="fa-brands fa-instagram"></i>
-                <!-- <i class="fa-brands fa-tiktok"></i> --> 
-                <i class="fa-brands fa-whatsapp"></i>
+            <div id="forth-section"> <!-- this section is for the pictures of the restaurant -->
+                <div>
+                    <div id="tryout">
+                        <div><img src="art work 1 (placeholder).jpg" class="one"></div>
+                        <div><img src="art work 2 (placeholder).jpg" class="two"></div>
+                        <div><img src="art work 3 (placeholder).jpg" class="three"></div>
+                    </div>
+                </div>
+            </div> 
+
+            <div id="footer-section">
+            <!-- <img src="image"> --> <!-- TODO: add a image of the logo & center image  -->
+                <div class="socials"> <!-- TODO: link the icons with the things needed -->
+                    <i class="fa-brands fa-instagram"></i>
+                    <!-- <i class="fa-brands fa-tiktok"></i> --> 
+                    <i class="fa-brands fa-whatsapp"></i>
+                </div>
+                <div class="footer-text">
+                    <h4>Opening Times</h4>
+                    <p>Monday - Saturday 09:00 - 20:00</p>
+                    <h4>Location</h4>
+                    <p>751 Ducan St Brooklyn Pretoria</p>
+                    <h4>Contact Us</h4>
+                    <p>+27 76 027 6644</p>
+                </div>
             </div>
-            <div class="footer-text">
-                <h4>Opening Times</h4>
-                <p>Monday - Saturday 09:00 - 20:00</p>
-                <h4>Location</h4>
-                <p>751 Ducan St Brooklyn Pretoria</p>
-                <h4>Contact Us</h4>
-                <p>+27 76 027 6644</p>
-            </div>
+
         </div>
+
     </body>
+    
 </html>
