--- a/Restaurant.html
+++ b/Restaurant.html
@@ -16,11 +16,12 @@
         <div class="restaurant">
 
             <div id="main-section"> 
+                
                 <div id="hero-section-1"> 
                     <div class="menu"><a href="menu.html">Menu</a></div>
                     <div class="logo">Logo</div>
                     <div class="gallary"><a href="gallary.html">Gallary</a></div>
-                    <!-- <div class="contacts"><a href="">Contacts</a></div> --> 
+                    <!-- <div class="sales"><a href="">Sales</a></div> --> 
                 </div>
     
                 <div id="second-section">
