--- a/Restaurant.html
+++ b/Restaurant.html
@@ -25,7 +25,7 @@
                 </div>
     
                 <div id="second-section">
-                    <img src="jummys jollof front (placeholder).webp" class="front">
+                    <img src="front (placeholder).jpg" class="front">
                 </div>
     
                 <div id="third-section">
