--- a/Restaurant.html
+++ b/Restaurant.html
@@ -49,9 +49,9 @@
                 <div id="footer-section">
                 <!-- <img src="image"> --> <!-- TODO: add a image of the logo & center image  -->
                     <div class="socials"> <!-- TODO: link the icons with the things needed -->
-                        <i class="fa-brands fa-instagram"></i>
+                        <a href="https://www.instagram.com/jummys_jollof/"><i class="fa-brands fa-instagram"></i></a>
                         <!-- <i class="fa-brands fa-tiktok"></i> --> 
-                        <i class="fa-brands fa-whatsapp"></i>
+                        <a href="https://wa.me/+27760276644"><i class="fa-brands fa-whatsapp"></i></a>
                     </div>
                     <div class="footer-text">
                         <h4>Opening Times</h4>
