--- a/Restaurant.html
+++ b/Restaurant.html
@@ -15,14 +15,16 @@
 
         <div class="restaurant">
 
-            <div id="main-section"> 
-                
-                <div id="hero-section-1"> 
-                    <div class="menu"><a href="menu.html">Menu</a></div>
-                    <div class="logo">Logo</div>
-                    <div class="gallary"><a href="gallary.html">Gallary</a></div>
-                    <!-- <div class="sales"><a href="">Sales</a></div> --> 
-                </div>
+            <div id="main-section">
+
+                <nav>
+                    <ul>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="Sales.html">Sales</a></li>
+                        <li><a href="gallary.html">Gallary</a></li>
+                        <li><a href="About Us.html">About Us</a></li>
+                    </ul>
+                </nav>
     
                 <div id="second-section">
                     <img src="front (placeholder).jpg" class="front">
