--- a/Restaurant.html
+++ b/Restaurant.html
@@ -17,6 +17,10 @@
 
             <div id="main-section">
 
+                <div class="logo-placement">
+                    <img src="logo (placeholder).avif" id="logo"> <!-- This is where the logo of the restaurant goes -->  
+                </div>
+
                 <nav>
                     <ul>
                         <li><a href="menu.html">Menu</a></li>
@@ -34,7 +38,7 @@
                     <div>
                         <p>Jummy's Jollof serves the best Nigerian food ! We're ready to serve you delicous,
                             authentic dishes that will make your taste buds dance. 
-                            Come and experience the true taste of Nigeria with us ! <!--TODO: enter text about the restaurant --> </p>
+                            Come and experience the true taste of Nigeria with us !</p>
                     </div>
                 </div>
     
@@ -49,8 +53,8 @@
                 </div> 
     
                 <div id="footer-section">
-                <!-- <img src="image"> --> <!-- TODO: add a image of the logo & center image  -->
-                    <div class="socials"> <!-- TODO: link the icons with the things needed -->
+                <!-- <img src="image"> -->
+                    <div class="socials">
                         <a href="https://www.instagram.com/jummys_jollof/"><i class="fa-brands fa-instagram"></i></a>
                         <!-- <i class="fa-brands fa-tiktok"></i> --> 
                         <a href="https://wa.me/+27760276644"><i class="fa-brands fa-whatsapp"></i></a>
