--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,6 @@
         <link rel="stylesheet" href="menu.css">
     </head>
     <body>
-        <div id="background">
-        </div>
+        Hello Menu
     </body>
 </html>
