--- a/menu.html
+++ b/menu.html
@@ -7,6 +7,42 @@
         <link rel="stylesheet" href="menu.css">
     </head>
     <body>
-        Hello Menu
+
+        <div class="menu">
+
+            <div class="food">
+                <h4>Food</h4>
+                <ul>
+                    <li>Jollof Rice</li>
+                    <li>Fried Rice</li>
+                    <li>Jummy Special Rice</li>
+                    <li>Efo Riro</li>
+                    <li>Egusi</li>
+                    <li>Moi Moi</li>
+                </ul>
+            </div>
+            <div class="meat">
+                <h4>Meat</h4>
+                <ul>
+                    <li>Turkey Wing</li>
+                    <li>Turkey Cuts</li>
+                    <li>Goat Meat</li>
+                    <li>Fish Tail</li>
+                    <li>Fish body</li>
+                </ul>
+            </div>
+            <div class="drinks">
+               <h4>Drinks</h4> 
+               <ul>
+                <li>Water</li>
+                <li>Grapetiser</li>
+                <li>Appetizer</li>
+                <li>Fruitree</li>
+                <li>Coke/Sprite/Fanta/Stoney</li>
+               </ul>
+            </div>
+
+        </div>
+
     </body>
 </html>
